<resources>
    <string name="app_name">Notification Logger</string>
    <string name="menu_item_settings">Settings</string>
    <string name="title_settings">Settings</string>

    <string name="main_snack_logging_disabled_warning">Logging is disabled.</string>
    <string name="main_snack_logging_disabled_warning_action">Enable</string>
    <string name="main_dialog_enable_notification_access_title">Enable Notification Access</string>
    <string name="main_dialog_enable_notification_access_message">In order to log notifcations, this app needs access to your notification system.</string>
    <string name="main_dialog_enable_notification_access_positive">Open settings</string>
    <string name="main_dialog_enable_notification_access_negative">Cancel</string>
    <string name="main_notification_details_package"><b>Package:</b> %1$s</string>
    <string name="main_notification_details_date"><b>Date:</b> %1$s</string>
    <string name="main_notification_details_userid"><b>User ID:</b> %1$s</string>
    <string name="main_notification_details_title"><b>Title:</b> %1$s</string>
    <string name="main_notification_details_message"><b>Message:</b> %1$s</string>
    <string name="main_notification_details_button_app_info">App Info</string>
    <string name="main_notification_details_button_ok">@string/ok</string>

    <string name="pref_category_notification_settings">Notification Settings</string>
    <string name="pref_category_support">Support</string>
    <string name="pref_logging_enabled_title">Notification Logging</string>
    <string name="pref_logging_enabled_summary">Enable/Disable notification logging</string>
    <string name="pref_blacklist_title">Blacklist</string>
    <string name="pref_blacklist_summary_empty">Exclude apps from being logged</string>
    <string name="pref_blacklist_summary_filled"><b>%1$s</b> apps blacklisted.</string>
    <string name="pref_clear_database_title">Clear database</string>
    <string name="pref_clear_database_summary">Remove all logged notifications</string>
    <string name="pref_export_title">Export to sdcard</string>
    <string name="pref_about_title">About</string>
    <string name="pref_clear_database_dialog_title">Clear database</string>
    <string name="pref_clear_database_dialog_message">Delete all logged notifications?</string>
    <string name="pref_clear_database_dialog_negative">@string/cancel</string>
    <string name="pref_clear_database_dialog_positive">Yes</string>
    <string name="pref_clear_database_snackbar_cleared">Database cleared.</string>

    <string name="fab_cd_create_notification">FAB: Create notification</string>
    <string name="title_create_notification">Create notification</string>
    <string name="title_blacklist">Blacklist</string>
    <string name="create_etTitleHint">Title</string>
    <string name="create_etMessageHint">Message</string>
    <string name="create_etNotificationIdHint">Notification ID</string>
    <string name="create_IntentHeader">Intent:</string>
    <string name="create_IconHeader">Icon:</string>
    <string name="create_CategoryHeader">Category:</string>
    <string name="create_cbSound">Sound</string>
    <string name="create_cbVibrate">Vibrate</string>
    <string name="create_cbBlink">Blink</string>
    <string name="create_cbAutoCancel">Auto cancel</string>
    <string name="create_btSchedule">schedule</string>
    <string name="create_btDispatch">dispatch</string>

    <string name="create_shedule_snack">Notification sheduled for %1$s</string>
    <string name="create_shedule_snack_undo">Undo</string>
    <string name="notification_list_empty">No notifications found.</string>
    <string name="notification_list_item_small_icon_content_description">Small notification icon: %s</string>
    <string name="notification_small_icon_cd">Notification small icon</string>
    <string name="app_icon_cd">Application icon for %s</string>
    <string name="notification_info_dialog_app_info_error">Failed to display app info.</string>
    <string name="menu_item_filter">Filter</string>
    <string name="menu_item_clear_filter">Clear filter</string>
    <string name="filter_dialog_ok">@string/ok</string>
    <string name="filter_dialog_cancel">@string/cancel</string>
    <string name="filter_dialog_title">Filter</string>
    <string name="notification_filter_dialog_title">Title</string>
    <string name="notification_filter_dialog_message">Message</string>
    <string name="notification_filter_dialog_application_name">Application name</string>
    <string name="notification_filter_dialog_package_name">Package name</string>
    <string name="blacklist_list_empty">No application is blacklisted.</string>
    <string name="fab_cd_create_blacklist_item">FAB: Create new blacklist item</string>
    <string name="blacklist_add_dialog_title">Choose app to blacklist</string>
    <string name="blacklist_dialog_remove_title">Remove from blacklist</string>
    <string name="blacklist_fragment_remove_message">Remove %s from blacklist?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="notification_export_filename">notification_export.json</string>
    <string name="pref_error_no_export_permission">Cannot export without file access</string>
    <string name="pref_export_progress_message">Exporting ...</string>
    <string name="pref_export_snack_failed">Failed to export data.</string>
    <string name="pref_export_snack_success">Exported to %s.</string>
    <string name="share_title">Share Notification</string>
    <string name="notification_list_frag_blacklist_snack">%s blacklisted.</string>
    <string name="notification_list_frag_blacklist_snack_action">Undo</string>
    <string name="pref_export_snack_action">Show</string>
    <string name="pref_export_snack_show_chooser_title">Open folder</string>
    <string name="pref_export_snack_show_activity_not_found">No file browser installed.</string>
    <string name="widget_list_title">Latest Notifications</string>
    <string name="widget_list_empty">No notifications logged.</string>

    <string-array name="notification_list_options">
        <item>Show more info</item>
        <item>Delete notification</item>
        <item>Create filter</item>
        <item>Blacklist this app</item>
        <item>Share message</item>
    </string-array>

    <string-array name="create_categories">
        <item>Alarm</item>
        <item>Call</item>
        <item>Email</item>
        <item>Error</item>
        <item>Event</item>
        <item>Message</item>
        <item>Progress</item>
        <item>Promo</item>
        <item>Recommendation</item>
        <item>Service</item>
        <item>Social</item>
        <item>Status</item>
        <item>System</item>
        <item>Transport</item>
    </string-array>

    <string name="create_icon_content_description">Notification icon: %s</string>
    <string name="create_btDispatch_content_description">Dispatch notification</string>
    <string name="create_btSchedule_content_description">Schedule notification</string>
    <string-array name="create_icons">
    <item>ADB</item>
    <item>Bluetooth</item>
    <item>Car</item>
    <item>Event</item>
    <item>Video</item>
    <item>Power</item>
    <item>SD card</item>
    <item>SMS</item>
</string-array>
    <string-array name="create_icons_content_descriptions" />
</resources>
